--- a/my-threejs-app/package.json
+++ b/my-threejs-app/package.json
@@ -16,6 +16,7 @@
     "next": "^14.2.16",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swiper": "^11.2.4",
     "three": "^0.173.0"
   },
   "devDependencies": {
