--- a/my-threejs-app/package.json
+++ b/my-threejs-app/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/node": "22.13.10",
     "eslint": "^9",
     "eslint-config-next": "15.1.6"
   }
